crates/strider/tests/snapshots/v3__ppc32be__elf_relocs__dispatch_via_table.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v7" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v7" [color="#888888", style=dashed];
  "v7" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "5" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x1ff58:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "12" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "16" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "20" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "24" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\nr30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "28" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "32" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "3" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "3" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "5" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
